fixed horizontal scroll and began making responsive

--- a/src/App.css
+++ b/src/App.css
@@ -114,16 +114,42 @@
   width: 100%;
   height: 50vw;
   background-color: white;
-  display: flex;
-  flex-direction: row;
 }
 
-@media only screen and (min-width: 600px) {
+@media only screen and (min-width: 700px) {
   .topLandingBack{
     height: 30vw;
     background-color:  #010516;
     border-bottom: 5vw solid white;
     border-right: 97vw solid  #010516;
+    display: flex;
+    flex-direction: row;
+  }
+
+  .landGraphic{
+    width: 45vw;
+    height: auto;
+    /*position: absolute;
+    margin-left: 45vw;
+    margin-top: -15vw;*/
+  }
+}
+
+@media only screen and (max-width: 700px) {
+  .topLandingBack{
+    background-color:  #010516;
+    border-bottom: 5vw solid white;
+    border-right: 97vw solid  #010516;
+    display: flex;
+    flex-direction: column-reverse;
+  }
+
+  .landGraphic{
+    width: 60vw;
+    height: auto;
+    /*position: absolute;
+    margin-left: 45vw;
+    margin-top: -15vw;*/
   }
 }
 
@@ -171,14 +197,6 @@
   src: url("Montserrat-Regular.ttf");
 }
 
-.landGraphic{
-  width: 45vw;
-  height: auto;
-  position: absolute;
-  margin-left: 45vw;
-  margin-top: -15vw;
-}
-
 /* About */
 .aboutContainer{
   width: 100%;
@@ -205,10 +223,15 @@
   justify-content: center;
 }
 
-.topAboutBack{
+.topAboutTitle{
   width: 100%;
   height: 19vw;
   background-color: #ffd1c3;
+}
+
+.whatIsText {
+  max-width: 50vw;
+  margin-left: 10vw;
 }
 
 .mainSubtitle{
